--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,26 @@
     font-family: monospace;
     font-size: 50px;
     text-align: center;
+
 }
 #img {
     height: auto;
     width: 1000px;
 }
 
-#ingredients, #instructions, #pit, #notes, p {
+div {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     text-align: left;
+    display: flex;
+    flex-direction:row;
 }
 
 #homepage {
     background-color: goldenrod;
     color: black;
     font-size: 15px;
+    padding: 0%;
 }
 
 #return {
@@ -26,6 +30,11 @@
     font-size: 15px;
 }
 
-#p {
+#p, #warning {
     text-align: center;
+}
+
+#warning {
+    font-size: 30px;
+    text-decoration: underline;
 }
